# invoice-extractor

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.frontend  README.md  app.py  auth.py  config.yml  docker-compose.yml  ingest.py  pyproject.toml  render.yaml  requirements.txt  store.py
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml
agents/: base.py  batch_agent.py  chat_agent.py  discrepancy_agent.py  extraction_agent.py  qa_agent.py  retriever.py  validation_agent.py
agents/providers/: gemini.py  ollama_gemma.py
api/: config.py  dependencies.py  main.py  supabase_client.py
api/middleware/: audit_writer.py  rate_limiter.py  request_context.py
api/routers/: alerts.py  api_keys.py  audit.py  batch.py  chat.py  compare.py  extraction.py  health.py  invoices.py  jobs.py  qa.py  users.py  webhooks.py
api/schemas/: alert.py  chat.py  extraction.py  invoice.py  job.py  user.py  webhook.py
api/services/: alerts.py  llm_tracker.py  storage.py  webhook_signer.py
db/: models.py  session.py
db/migrations/: env.py  script.py.mako
eval/: generate_dataset.py  run_eval.py  scoring.py
frontend/: api_client.py  app.py  auth.py  theme.py
frontend/pages/: batch.py  chat.py  compare.py  dashboard.py  extract.py  invoices.py  qa.py
models/: invoice.py
rag/: agent.py  comparator.py  extractor.py  hybrid_retriever.py  llm.py  ocr.py  preview.py  utils.py  validator.py
test-screenshots/: test_visual.py
tests/: conftest.py  test_agent.py  test_app.py  test_comparator.py  test_docker.py  test_eval.py  test_extractor.py  test_hybrid_retriever.py  test_imports.py  test_ingest.py  test_llm.py  test_models.py  test_ocr.py  test_preview.py  test_store.py  test_utils.py  test_validator.py  test_vision.py
tests/integration/: test_alerts_api.py  test_api_batch.py  test_api_chat.py  test_api_extraction.py  test_api_invoices.py  test_health.py  test_webhooks.py
tests/unit/: test_alert_job.py  test_alert_model.py  test_alerts_service.py  test_api_client.py  test_api_client_chat.py  test_batch_agent.py  test_chat_agent.py  test_chat_models.py  (+23 more)
vision/: gemini.py
workers/: alert_job.py  batch_job.py  extract_job.py  ingest_job.py  webhook_job.py  worker.py
(+13 files in other folders)
