[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-extractor"
version = "2.0.0"
requires-python = ">=3.11"

[project.optional-dependencies]
shared = [
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.5.0",
]
prod = [
    "invoice-extractor[shared]",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    # DB
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    # Auth / Security
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
    # Queue
    "rq>=1.16.0",
    "redis>=5.0.0",
    # AI
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "google-genai>=1.0.0",
    "langchain-ollama>=0.2.0",
    "rank-bm25>=0.2.2",
    # Observability
    "structlog>=24.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.20.0",
    "langsmith>=0.1.0",
    # Utils
    "pydantic-settings>=2.0.0",
    "python-box>=7.0.0",
    "pyyaml>=6.0",
    "pypdf>=4.2.0",
    "Pillow>=10.3.0",
    "fpdf2>=2.7.0",
    "pypdfium2>=4.0.0",
    "rapidocr-onnxruntime>=1.3.0,<1.4",
    "onnxruntime>=1.17.0,<1.19",
]
frontend = [
    "invoice-extractor[shared]",
    "streamlit>=1.37.0",
    "streamlit-cookies-controller>=0.0.4",
]
dev = [
    "invoice-extractor[prod]",
    "invoice-extractor[frontend]",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "agents*", "workers*", "db*", "frontend*", "models*", "rag*", "vision*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
